# textual-widgets

./: .git-blame-ignore-revs  LICENSE  README.de.md  README.md  bootstrap.ps1  bootstrap.sh  compile-linux.sh  compile-macos.sh  compile-win64.ps1  pyproject.toml  run.bat  run.ps1  run.sh  setup.bat  setup.sh
.github/workflows/: ci.yml  release.yml
src/textual_widgets/: __init__.py  about_screen.py  clickable_links.py  context_menu.py  crash_guard.py  date_picker.py  hamburger_menu.py  http_status_screen.py  info_header.py  log_panel.py  search_history_dropdown.py  settings_screen.py  splitter.py  terminal_title.py  testing.py  text_input_screen.py  url_input_screen.py
src/textual_widgets/quotes/: quotes.json
src/textual_widgets/storybook/: __init__.py  __main__.py  app.py  stories.py
tests/: test_about_screen.py  test_context_menu.py  test_crash_guard.py  test_hamburger_menu.py  test_info_header.py  test_log_panel.py  test_settings_screen.py  test_splitter.py  test_terminal_title.py  test_testing.py  test_text_input_screen.py  test_url_input_screen.py
